Revert "Fix burger menu alignment on mobile"

--- a/case0.css
+++ b/case0.css
@@ -109,16 +109,3 @@
     display: block; /* Stellt sicher, dass die Flags inline bleiben */
 }
 
-@media (max-width: 768px) {
-    .language-toggle2 {
-        order: 1;
-        margin-left: 0;
-        padding-right: 0;
-    }
-
-    .burger-menu {
-        margin-left: auto;
-        order: 2;
-    }
-}
-
