--- a/styles.css
+++ b/styles.css
@@ -460,16 +460,12 @@ body.blue-bg .navbar-container {
 @media (max-width: 768px) {
   .burger-menu {
     display: flex;
-    margin-left: auto;
-    order: 2;
   }
   .desktop-nav {
     display: none;
   }
   .language-toggle2 {
-    order: 1;
-    margin-left: 0;
-    padding-right: 0;
+    order: 2;
   }
   .contact-wrapper {
     flex-direction: column;
